src/objects/IP_Expert__c.object
<CustomObject>
    <description>Users who are responsible for reviewing ideas in a category.</description>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IP_Category__c.Zone__c</field>
                <operation>equals</operation>
                <valueField>$Source.Zone__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IP_Category__c</referenceTo>
        <relationshipLabel>Experts</relationshipLabel>
        <relationshipName>Experts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Experts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <referenceTo>IP_Zone__c</referenceTo>
        <relationshipLabel>Experts</relationshipLabel>
        <relationshipName>Experts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Category__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IPE-{0000}</displayFormat>
        <label>Experts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>